--- a/api-info.yaml
+++ b/api-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: ci
+  name: swagger
   description: The official Harness SWAGGER APIs
 spec:
   type: openapi
