--- a/catalog-info-ngui.yml
+++ b/catalog-info-ngui.yml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     backstage.io/kubernetes-label-selector: 'app=next-gen-ui'
     github.com/project-slug: 'harness/harness-core-ui'
+    backstage.io/techdocs-ref: dir:. 
   name: ng-ui
 spec:
   lifecycle: production
