--- a/catalog-info-ngui.yml
+++ b/catalog-info-ngui.yml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     backstage.io/kubernetes-label-selector: 'app=next-gen-ui'
     github.com/project-slug: 'harness/harness-core-ui'
-    backstage.io/techdocs-ref: dir:. 
+    backstage.io/techdocs-ref: url:https://github.com/sandeepa-kv-jois/harness-core-ui
   name: ng-ui
 spec:
   lifecycle: production
