--- a/lib-info.yaml
+++ b/lib-info.yaml
@@ -1,3 +1,7 @@
-kind: Component
-type: library
-name: core-ui-library
+apiVersion: backstage.io/v1alpha1
+kind: System
+metadata:
+  name: Harness_UI
+spec:
+  owner: ui
+  type: library
