--- a/catalog-info-ngui.yml
+++ b/catalog-info-ngui.yml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     backstage.io/kubernetes-label-selector: 'app=next-gen-ui'
     github.com/project-slug: 'sandeepa-kv-jois/harness-core-ui'
+    circleci.com/project-slug: github/ruby2001/sample-javascript-cfd 
     backstage.io/techdocs-ref: url:https://github.com/sandeepa-kv-jois/harness-core-ui
   name: ng-ui
 spec:
