--- a/src/modules/70-pipeline/.eslintrc.yml
+++ b/src/modules/70-pipeline/.eslintrc.yml
@@ -5,6 +5,7 @@ rules:
         - lodash.*
         - microfrontends/*
         - '!microfrontends/ChildAppMounter'
+        - modules/72-freeze-windows/*
         - modules/72-templates-library/*
         - modules/72-triggers/*
         - modules/75-cd/*
@@ -15,6 +16,7 @@ rules:
         - modules/85-cv/*
         - modules/85-sto-steps/*
         - modules/90-gitops/*
+        - '@freeze-windows/*'
         - '@templates-library/*'
         - '@triggers/*'
         - '@cd/*'
