--- a/src/modules/18-audit-trail/.eslintrc.yml
+++ b/src/modules/18-audit-trail/.eslintrc.yml
@@ -20,6 +20,7 @@ rules:
         - modules/45-dashboards/*
         - modules/45-projects-orgs/*
         - modules/70-pipeline/*
+        - modules/72-freeze-windows/*
         - modules/72-templates-library/*
         - modules/72-triggers/*
         - modules/75-cd/*
@@ -45,6 +46,7 @@ rules:
         - '@dashboards/*'
         - '@projects-orgs/*'
         - '@pipeline/*'
+        - '@freeze-windows/*'
         - '@templates-library/*'
         - '@triggers/*'
         - '@cd/*'
