--- a/src/modules/23-default-settings/.eslintrc.yml
+++ b/src/modules/23-default-settings/.eslintrc.yml
@@ -18,6 +18,7 @@ rules:
         - modules/45-dashboards/*
         - modules/45-projects-orgs/*
         - modules/70-pipeline/*
+        - modules/72-freeze-windows/*
         - modules/72-templates-library/*
         - modules/72-triggers/*
         - modules/75-cd/*
@@ -41,6 +42,7 @@ rules:
         - '@dashboards/*'
         - '@projects-orgs/*'
         - '@pipeline/*'
+        - '@freeze-windows/*'
         - '@templates-library/*'
         - '@triggers/*'
         - '@cd/*'
