--- a/src/modules/25-governance/.eslintrc.yml
+++ b/src/modules/25-governance/.eslintrc.yml
@@ -17,6 +17,7 @@ rules:
         - modules/45-dashboards/*
         - modules/45-projects-orgs/*
         - modules/70-pipeline/*
+        - modules/72-freeze-windows/*
         - modules/72-templates-library/*
         - modules/72-triggers/*
         - modules/75-cd/*
@@ -39,6 +40,7 @@ rules:
         - '@dashboards/*'
         - '@projects-orgs/*'
         - '@pipeline/*'
+        - '@freeze-windows/*'
         - '@templates-library/*'
         - '@triggers/*'
         - '@cd/*'
