--- a/src/modules/30-secrets/.eslintrc.yml
+++ b/src/modules/30-secrets/.eslintrc.yml
@@ -15,6 +15,7 @@ rules:
         - modules/45-dashboards/*
         - modules/45-projects-orgs/*
         - modules/70-pipeline/*
+        - modules/72-freeze-windows/*
         - modules/72-templates-library/*
         - modules/72-triggers/*
         - modules/75-cd/*
@@ -35,6 +36,7 @@ rules:
         - '@dashboards/*'
         - '@projects-orgs/*'
         - '@pipeline/*'
+        - '@freeze-windows/*'
         - '@templates-library/*'
         - '@triggers/*'
         - '@cd/*'
