--- a/src/modules/35-connectors/.eslintrc.yml
+++ b/src/modules/35-connectors/.eslintrc.yml
@@ -10,6 +10,7 @@ rules:
         - modules/45-dashboards/*
         - modules/45-projects-orgs/*
         - modules/70-pipeline/*
+        - modules/72-freeze-windows/*
         - modules/72-templates-library/*
         - modules/72-triggers/*
         - modules/75-cd/*
@@ -25,6 +26,7 @@ rules:
         - '@dashboards/*'
         - '@projects-orgs/*'
         - '@pipeline/*'
+        - '@freeze-windows/*'
         - '@templates-library/*'
         - '@triggers/*'
         - '@cd/*'
