--- a/src/modules/45-dashboards/.eslintrc.yml
+++ b/src/modules/45-dashboards/.eslintrc.yml
@@ -7,6 +7,7 @@ rules:
         - '!microfrontends/ChildAppMounter'
         - modules/45-projects-orgs/*
         - modules/70-pipeline/*
+        - modules/72-freeze-windows/*
         - modules/72-templates-library/*
         - modules/72-triggers/*
         - modules/75-cd/*
@@ -19,6 +20,7 @@ rules:
         - modules/90-gitops/*
         - '@projects-orgs/*'
         - '@pipeline/*'
+        - '@freeze-windows/*'
         - '@templates-library/*'
         - '@triggers/*'
         - '@cd/*'
