feat: [CDS-41528]: Add azure blueprint step (#10512)
* feat: [CDS-41528]: Add azure blueprint step

* fix: prettier issue

* fix: update snapshots

* chore: update unit tests

* fix: add new blueprint icon

* fix: Remove snapshots and assert values

* fix: filestore runtime input

* chore: update unit tests

* fix: reuse harness option component

* chore: pr comments

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -439,3 +439,13 @@ hostFilters: hostFilters
 attributeFilters: attributeFilters
 azureArmRollback:
   description: Restore the Azure ARM resource group to its previous running state.
+azureBlueprint:
+  description: Build Azure Blueprint artifacts to rapidly build and start up new environments.
+  templateFileSource: Template File Source
+  templateFileDetails: Template File Details
+  specifyTemplateFileSource: Specify Azure Blueprint Template File
+  azureBlueprintTemplate: Azure Blueprint Template
+  assignmentName: Assignment Name
+  assignmentNameError: Assignment Name Required
+  configuration: Azure Blueprint Configuration
+  managementGroup: Management Group
