fix: [CDS-42398]: Tags YAML update , tags icons and last key stroke update , tags remove button functionality correction (#10875)
* fix: [CDS-42398]: tags bidirectional update from the YAML to VISUAL

* fix: [CDS-42398]: tags bidirectional update from the YAML to VISUAL

* fix: [CDS-42398]: fix azure infra bugs

* fix: [CDS-42398]: fix jest test

* fix: [CDS-42398]: fix default port and tags css fix

* fix: [CDS-42398]: remove inline styles

* fix: [CDS-42398]: fix css snap

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -350,6 +350,7 @@ infrastructure:
     cloudProvider: Cloud Provider
     hostConnectionAttributes: Host Connection Attributes
     usePublicDns: Use Public DNS connection
+    noTagsAzure: No Tags found with given Connector and Subscription Id
 cloudFormation:
   createDescription: Provision resources using a CloudFormation template.
   deleteDescription: Remove any CloudFormation stack you provisioned via Harness or other methods.
