feat: [SRM-11694]: fixing multiple scenarios in templates, verify step and doing enhancements (#10911)
* feat: [SRM-11694]: fixing multiple scenarios in templates, verify step and doing enhancements

* feat: [SRM-11694]: adding more unit tests and addressing pr comments

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -410,6 +410,7 @@ monitoringSources:
     selectPathForMessageIdentifier: Select path for message identifier
     newGCOLogsServiceInstance: New Service Instance
     newGCOLogsMessageIdentifier: New Message Identifier
+    messageIdentifierTitle: Message Identifier
     fetchRecords: Fetch records
     newGCOLogsMessage: New GCO Logs Message
     records: Records
