feat: [CI-3777]: search in tests (#10882)
* feat: [CI-3777]: search in tests

* feat: [CI-3777]: resolve sonar issue

* feat: [CI-3777]: minimal Search button

* feat: [CI-3777]: uicore package

* feat: [CI-3777]: address tests comments

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -713,6 +713,7 @@ testsReports:
   resultLabel: Test Execution Result
   sortBy: 'Sort by:'
   poweredByTI: 'Powered by Test Intelligence'
+  searchByTestName: Search by Test Name
   tiCallToAction:
     header: Did you know you can save time using Test Intelligence?
     upsellSubText: 'Optimize your tests cycle and reduce build time by using machine learning based Test Intelligence.'
