fix: [PIE-4642]: google artifact registry added (#10327)
* fix: google artifact registry added

* fix: jest test cases added

* fix: jest added and artifact hidden

* fix: runtime field enabled

* fix: gar icon added and regions sorted

* fix: buildDetails api added

* fix: swagger updated

* fix: connector value passed in headers

* fix: UI issues fixed

* fix: test cases and type issues fixeD

* fix: latest swagger added

* fix: latest swagger added

* fix: snapshot updated

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -187,6 +187,7 @@ validation:
     required: Email is required
     format: Please input valid email address
   repositoryName: Repository Name is required
+  package: Package is required
   invalidYamlText: 'You have provided invalid or empty YAML. Please provide a valid YAML'
   environmentIsRequired: 'Environment is required'
   subscription: 'Subscription is required'
