--- a/src/modules/15-notifications/.eslintrc.yml
+++ b/src/modules/15-notifications/.eslintrc.yml
@@ -20,6 +20,7 @@ rules:
         - modules/40-gitsync/*
         - modules/45-dashboards/*
         - modules/45-projects-orgs/*
+        - modules/60-scm/*
         - modules/70-pipeline/*
         - modules/72-freeze-windows/*
         - modules/72-templates-library/*
@@ -47,6 +48,7 @@ rules:
         - '@gitsync/*'
         - '@dashboards/*'
         - '@projects-orgs/*'
+        - '@scm/*'
         - '@pipeline/*'
         - '@freeze-windows/*'
         - '@templates-library/*'
