--- a/src/modules/40-gitsync/.eslintrc.yml
+++ b/src/modules/40-gitsync/.eslintrc.yml
@@ -7,6 +7,7 @@ rules:
         - '!microfrontends/ChildAppMounter'
         - modules/45-dashboards/*
         - modules/45-projects-orgs/*
+        - modules/60-scm/*
         - modules/70-pipeline/*
         - modules/72-freeze-windows/*
         - modules/72-templates-library/*
@@ -21,6 +22,7 @@ rules:
         - modules/90-gitops/*
         - '@dashboards/*'
         - '@projects-orgs/*'
+        - '@scm/*'
         - '@pipeline/*'
         - '@freeze-windows/*'
         - '@templates-library/*'
