--- a/src/modules/45-dashboards/.eslintrc.yml
+++ b/src/modules/45-dashboards/.eslintrc.yml
@@ -6,6 +6,7 @@ rules:
         - microfrontends/*
         - '!microfrontends/ChildAppMounter'
         - modules/45-projects-orgs/*
+        - modules/60-scm/*
         - modules/70-pipeline/*
         - modules/72-freeze-windows/*
         - modules/72-templates-library/*
@@ -19,6 +20,7 @@ rules:
         - modules/85-sto-steps/*
         - modules/90-gitops/*
         - '@projects-orgs/*'
+        - '@scm/*'
         - '@pipeline/*'
         - '@freeze-windows/*'
         - '@templates-library/*'
