--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -450,3 +450,5 @@ azureBlueprint:
   assignmentNameError: Assignment Name Required
   configuration: Azure Blueprint Configuration
   managementGroup: Management Group
+validation:
+  specifyFilter: Specify the filter condition
