--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1250,7 +1250,9 @@ OverviewEmptyStates:
   runPipelineHeaderMsg: You haven’t tried running your pipelines yet.
   runPipelineInfo: Click the button below to select a pipeline and get your {{executionsLabel}} started.
 importSuccessMessage: '{{resourceType}} has been imported successfully'
-duplicateImport: This file is already in use. Do you still want to import again?
+duplicateImport: This file is already in use. Do you still want to proceed?
+duplicateImportPipeline: This file is already in use by another pipeline. Do you still want to proceed?
+duplicateImportInputset: This file is already in use by another pipeline or input set. Do you still want to proceed?
 MatrixNode:
   maxConcurrency: 'Max Concurrency:'
 fieldLabels:
