feat: [SRM-11604]: Add delete confirmation popup (#10953)
* feat: [SRM-11604]: Add delete confirmation popup

* feat: [SRM-11604]: Add Cypress

* feat: [SRM-11604]: Fix Cypress

* feat: [SRM-11604]: Fix Cypress metric data

* feat: [SRM-11604]: Revert of performance changes to reduce number of files

* feat: [SRM-11763]: rebase with develop and fix Cypress

* feat: [SRM-11763]: refactor

* feat: [SRM-11604]: Add correct content text for metric pack remove

* feat: [SRM-11604]: Updated warning text

* feat: [SRM-11604]: Updated with review comments

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -14,11 +14,13 @@ repositoryCertificates: Repository Certificates
 notEnabled: 'Not Enabled'
 apiStatus: 'API Status'
 gpgkey: 'GPG Key'
+warning: Warning
 gnupgKeys: GnuPG Keys
 featureComingSoon: This feature is coming soon.
 skip: Skip
 sync: Sync
 inputVariables: Input Variables
+confirmAction: Confirm action
 accountSetup: Account Setup
 projectSetup: Project Setup
 orgSetup: Org Setup
