--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -926,3 +926,6 @@ metricThresholds:
     countValue: Enter 2 or more
     duplicateThreshold: Duplicate threshold
     percentageValidation: Enter value between 1 - 100 for Percentage
+  deletePromptTitle: Confirm delete Metric thresholds
+  metricPacksDeletePromptContent: Unchecking the metric pack will also remove the corresponding metric thresholds settings. This action cannot be undone.
+  customMetricsDeletePromptContent: Deleting the custom metric will also remove the corresponding metric thresholds settings. This action cannot be undone.
