feat: [PIE-4620]: memoize execution list view and executed by icon, trigger link etc (#10924)
* feat: memoise execution list view and executde by icon, trigger link

* feat: selective stage execution tag

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1330,3 +1330,4 @@ azureWebApp:
     blueGreen: 'Harness performs a two phase deployment: Phase 1 deploys a new service version to deployment slot. Phase 2 swaps the deployment slot with target slot.'
 skipInstances:
   title: 'Skip instances with the same artifact version already deployed'
+selectiveStageExecution: 'Selective stage execution'
