feat: [PIE-5114]: Config file service overrides (#11009)
* feat: [PIE-5114]: Config file service overrides

* fix: snapshot updated

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1242,7 +1242,7 @@ configFiles:
   encryptedFiles: 'Encrypted file(s)'
   fileType: 'File Type'
   encryptedLocation: 'Secrets Manager Name'
-  addConfigFile: '+ Add Config File'
+  addConfigFile: Add Config File
   error:
     fileType: 'File type is required'
     identifier: 'Config file identifier is required'
