--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -342,6 +342,8 @@ serviceOverrides:
   variableOverrides: Variable Overrides
   manifestOverrides: Manifest Overrides
   configFileOverrides: Config File Overrides
+  configFileSelection: Config File Selection
+  newConfigFile: New Config File
   helperText: Override existing variables or define new variables based on the selected service
   deleted: Successfully deleted Service Override
   deletedOneVariable: Successfully deleted variable from service override
