feat: [PIE-5109]: Reconcile Button on Input Set List View page for Inline & Old Git Sync (#10984)

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -745,6 +745,7 @@ inputSets:
   editInYamlView: Edit in YAML view
   invalidInputSetDesc1: Your input set is not valid anymore because you do not have any pipeline runtime inputs. You may delete this input set, update your pipeline or go back to the Input Set list.
   invalidInputSetDesc2: Your input set is not valid anymore because you do not have any pipeline runtime inputs. You can either delete this input set or navigate to the Input Set list.
+  invalidInputSetDesc3: Your input set is not valid anymore because you do not have any pipeline runtime inputs. This input set may be removed.
   invalidInputSet: Invalid Input Set
   invalidOverlayISDesc1: Your overlay input set is not valid anymore because there are no valid input set references. This overlay input set may be removed.
   invalidOverlayISDesc2: Your overlay input set is not valid anymore because there are no valid input set references. You can either delete this overlay input set or navigate to the Input Set list.
