feat: [PL-26858]: Centralised view for User Details (#10636)
* feat: [PL-26858]: Centralised view for User Details

* fix: Org and Project Scope Filters

* fix: Major changes

* fix: Links

* fix: Review comments

* fix: Tests

* fix: Sonar checks

* fix: Project DropDown

* fix: Contract changes

* fix: Checks

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -999,3 +999,6 @@ moduleTitles:
 ignore: Ignore
 serviceDetails: Service Details
 serviceName: Service Name
+assignedAt: Assigned at
+assignedThrough: Assigned Through
+directly: Directly
