feat: [PL-27907]: Removed output vars and fix issue with unsaved changes (#10959)
* feat: [PL-27907]: Removed output vars and fix issue with unsaved changes

* feat: [PL-27907]: Removed output vars and fix issue with unsaved changes

* feat: [PL-27907]: Removed output vars and fix issue with unsaved changes

* feat: [PL-27907]: Custom Secret Manager to Custom Secrets Manager

* feat: [PL-27907]: removed s

* feat: [PL-27907]: removed s

* feat: [PL-27907]: removed s

* feat: [PL-27907]: reveted

* feat: [PL-27907]: fixed value issue in template and sm

* feat: [PL-27907]: fixed value issue in template and sm

* feat: [PL-27907]: fixed value issue in template and sm

--- a/src/modules/35-connectors/strings/strings.en.yaml
+++ b/src/modules/35-connectors/strings/strings.en.yaml
@@ -82,7 +82,7 @@ connectivityMode:
   connectToProvider: 'Connect to the provider'
   selectText: 'Select how you would like to connect to the provider'
 title:
-  customSecretManager: 'Custom Secret Manager'
+  customSecretManager: 'Custom Secrets Manager'
   k8sCluster: 'Kubernetes Cluster'
   gcpConnector: 'Google Cloud Provider'
   pdcConnector: 'Physical Data Center'
@@ -916,7 +916,7 @@ gitProviderURLs:
   bitbucket: 'https://bitbucket.org'
   azureRepos: 'https://dev.azure.com'
 customSM:
-  details: Custom Secret Manager Details
+  details: Custom Secrets Manager Details
   selectTemplate: Select Template
   executeOnDelegate: Execute on Delegate
   templateRef: Template Reference
