feat: [CCM-8829]: Rule details page enhancements (#10960)

--- a/src/modules/75-ce/strings/strings.en.yaml
+++ b/src/modules/75-ce/strings/strings.en.yaml
@@ -526,6 +526,8 @@ co:
         vmsManaged: 'VMs Managed'
         dependantRule: 'Dependant Rule'
         delayInSec: 'Delay(secs)'
+        serviceManaged: 'Service managed'
+        ecsClusterName: 'ECS cluster name'
       managedVmTableHeaders:
         name: 'Name/ID'
         ip: 'Public/Private IP'
