fix: [SRM-11705]: multiple bug fixes (#11069)

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -269,7 +269,7 @@ monitoringSources:
     validations:
       selectApp: Please select application and its environment
       selectTier: Please select tier and its service
-      selectMetricPack: Plese select metric packs
+      selectMetricPack: Please select atleast one metric pack
     connectToMonitoringSource: Connect to your AppDynamics Monitoring Source
     firstTimeSetupText: 'First time? You can setup a new Connector to AppDynamics. It takes 2 minutes.'
     createConnectorText: '+ New AppDynamics Connector'
