fix: [PIE-4585]: Custom artifact source (#10174)
* fix: added custom artifact source

* fix: delegate field added

* fix: delegate selctor runtime field added

* fix: delegate selctor runtime field added

* fix: test cases added

* fix: inline to Inline

* fix: custom artifact preserving previous step values

* fix: expressions added to delegates

* fix: added useportal for delegates field

* fix: timeout taken out of spec

* fix: timeout taken out of spec

* fix: UI issues fixed

* fix: rebased to master

* fix: typecheck fixed

* fix: [PIE-4585]: code fix

* fix: renamed VariableInterface interface

* fix: rebased and fixed conflicts

* fix: typecheck corrected moved timeout to outside hierarchy in test

Co-authored-by: Pratyush Garg <pratyush.garg@harness.io>
Co-authored-by: Sagar-Rajput7 <sagar.rajput@harness.io>
Co-authored-by: Vikrant Gupta <vikrant.gupta@harness.io>

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -23,6 +23,8 @@ inputVariables: Input Variables
 confirmAction: Confirm action
 accountSetup: Account Setup
 projectSetup: Project Setup
+additionalAttributes: Additional Attributes
+addAttribute: + Add Attribute
 orgSetup: Org Setup
 delegateForTask: '{{delegate}} for {{taskName}}'
 defineDelegateSelector: 'Define Delegate Selector'
