--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1327,6 +1327,9 @@ phasesForm:
     war: 'War'
     rpm: 'Rpm'
     zip: 'Zip'
+  packageTypesWinrm:
+    website: 'Website'
+    virtualDir: 'Virtual directory'
 draft: 'Draft'
 duplicateStepIdentifiers: 'Duplicate identifiers found: {{duplicateIdString}}'
 alwaysEditModeYAML: Enable read/write mode always
