feat: [PIE-5281]: Add ability to see unsaved changes as a diff and ot… (#11108)
* feat: [PIE-5281]: Add ability to see unsaved changes as a diff and other improvements

* feat: [PIE-5281]: Add ability to see unsaved changes as a diff and other improvements

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1,6 +1,7 @@
 verificationResult: 'Verification result:'
 estimatedTimeRemaining: 'Estimated time remaining:'
 progressPercentage: 'Progress percentage:'
+piplineDiffTitle: pipeline.yaml (saved) ↔ pipeline.yaml (updated)
 clone: Clone Pipeline
 discard: '{{ $.common.discard }}'
 serviceDependencyText: Service Dependency
