feat: [PIE-4954]: Deployment Freeze - Initial Layout (#11114)
* feat: [PIE-4954]: Deployment Freeze - Initial Layout

* feat: [PIE-4954]: Deployment Freeze - Initial Layout

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -89,6 +89,7 @@ copyFqn: Copy fully qualified name
 selectType: Select Type
 timeframe: Timeframe
 selectTimeFrame: Select Timeframe
+lastModified: 'Last Modified'
 accountSetting:
   connector:
     loading: 'Loading settings...'
